--- a/Web_basic/3.html
+++ b/Web_basic/3.html
@@ -4,39 +4,7 @@
     <title>WEB1 - Javascript</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script>
-    function LinkssetColor(color){
-        var alist = document.querySelectorAll('a')
-        var i = 0
-        while(i<alist.length){
-            alist[i].style.color = color;
-          i = i + 1;
-          }
-    }
-    function BodysetColor(color){
-        document.querySelector('body').style.color = color
-    }
-    function BodySetBackgroundColor(color){
-        document.querySelector('body').style.backgroundColor = color;
-    }
-    function nightDayHandler(self){
-    var target = document.querySelector('body')
-     if (self.value === 'night'){
-      BodySetBackgroundColor('black');
-      BodysetColor('white');
-      self.value = 'day'; 
-      LinkssetColor('powderblue')
-
-     }
-     else{
-      BodySetBackgroundColor('white');
-      BodysetColor('black');
-      self.value = 'night';
-      LinkssetColor('blue')
-     
-      }
-    }
-    </script>
+    <script src="colors.js"></script>
 </head>
 <body>
  <h1><a href="index.html">WEB</a></h1>
