--- a/Web_basic/3.html
+++ b/Web_basic/3.html
@@ -4,6 +4,7 @@
     <title>WEB1 - Javascript</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="colors.js"></script>
 </head>
 <body>
