feature night/day mode

--- a/Web_basic/self_introduction/main.html
+++ b/Web_basic/self_introduction/main.html
@@ -4,61 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>self_introduction_main</title>
-    <style>
-        body{
-            margin: 0;
-            border-bottom: 2px solid gray;
-        }
-        h1 {
-            margin: 5px;
-            padding: 10px;
-            text-align: center;
-            /*text-decoration: underline solid black;*/
-        }
-        h2{            
-            margin-bottom: 0px;
-            margin-left: 30px;
-        }
-        #grid{
-            display: grid;
-            border-top: 2px solid gray;
-            grid-template-columns: 150px 1fr;
-        }
-        #grid ol{
-            border-right: 2px solid gray;
-            width: 70px;
-            margin: 0px;
-            padding:30px;
-        }
-        #grid #article{
-            padding-left: 20px;
-            margin: 0px;
-        }
-        @media(max-width: 800px){
-            h2{
-                border-bottom: none;
-            }
-            #grid{
-                border-top: none;
-                display: block;
-            }
-            #grid ol {
-                border-right: none;
-            }
-            #grid #article 
-            {
-                border-top: 2px solid gray;
-            }
-        }
-
-        /*#grid{
-            display:grid;
-            grid-template-columns: 150px 1fr;
-        }*/
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="color.js"></script>
 </head>
 <body>
     <h1>Welcome to <a href="main.html">gunu's</a> page!</h1>
+    <input type="button" value="night" onclick="
+    nightDayHandler(this);
+    ">
+
     <h2>Let me know U!</h2>
     <div id="grid">
         <ol>
@@ -80,7 +34,7 @@
                 One of my choices is... pizza? I really like it because it have many kinds of ingredients
                 and favors which make me pleased. when I eat special galic sauce on it, it is really delicious.
                 <br> actually, I am very starving now...<br>
-                <img src="sauce.jpeg" > <br>his is best  sauce what I ever had</p>
+                <img src="sauce.jpeg" hegiht="600" width="300"> <br>his is best  sauce what I ever had</p>
             <h3>My family</h3>
             <p>My family is mom, dad, my youngerbrother. At the moment, My brother takes call of duty.
             <br>Therefore, my family is look forward to see him as soon as possible. However, thesedays,
